<resources>
    <string name="app_name">Bellezza</string>
    <string name="price">Price:</string>
    <string name="available">Available:</string>
    <string name="email">Enter your email...</string>
    <string name="phone_number">Enter phone number...</string>
    <string name="specify_quantity">Specify quantity you wish to purchase:</string>
    <string name="enter_quantity">Enter quantitiy...</string>
    <string name="add_to_cart_warning_message">Please, make sure that you correctly filled either email or phone number or telegram username fields. Otherwise, we might not be able to contact you and proceed your order accordingly.</string>
    <string name="add_cart_success_message">This product has been added to your cart.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="phone_or_email_provided">Please, make sure that you provided either email or phone number or Telegram username so that we can contact you.</string>
    <string name="description">Description:</string>
    <string name="specifications">Specifications:</string>
    <string name="additional_information">Additional Information:</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product name...</string>
    <string name="product_desc">Product description...</string>
    <string name="enter_price">Price (in $)...</string>
    <string name="enter_available">Available...</string>
    <string name="enter_specs">Enter product specifications...</string>
    <string name="enter_additional_information">Enter additional info...</string>
    <string name="error_message_for_add_new_product">Product Name, Description, Price, Specification and Main Image cannot be empty. Please, make sure you filled these fields.</string>
    <string name="select_main_image">Select Main Image:</string>
    <string name="admin_menu_add_new">Add New Product</string>
    <string name="admin_menu_orders">View Orders</string>
    <string name="admin_menu_logout">Log Out</string>
    <string name="my_cart">My Cart</string>
    <string name="login">Admin Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="ordering">Ordering...</string>
    <string name="processing_order">Your order is being created.</string>
    <string name="posted">Posted:</string>
    <string name="quantity">Quantitiy:</string>
    <string name="total">Total:</string>
    <string name="added_product_successfully">New product has been added successfully.</string>
    <string name="product_name_warning">Product Name</string>
    <string name="product_desc_warning">Product Description</string>
    <string name="product_spec_warning">Specification</string>
    <string name="product_price_warning">Price</string>
    <string name="main_image_warning">Main Image</string>
    <string name="cant_be_empty">can not be empty. </string>
    <string name="delete_order">Deleting Order</string>
    <string name="sure_to_delete_order">Are you sure you want to delete this order?</string>
    <string name="order_deleted">Your order has been deleted.</string>
    <string name="loading">Loading...</string>
    <string name="loading_products">Please wait. Product data is being retreived. </string>
    <string name="main_image_pick">Click here to add main image...</string>
    <string name="image1_pick_hint">Click here to add first image...</string>
    <string name="image2_click_hint">Click here to add second image...</string>
    <string name="image3_pick_hint">Click here to add third image...</string>
    <string name="password">Password...</string>
    <string name="enter_email">Email...</string>
    <string name="admin_login">Admin Login</string>
    <string name="email_or_password_empty">Email and Password fields should not be empty. Please, fill them in order to proceed.</string>
    <string name="beauty_conquers_all">Beauty conquers all.</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language">Language</string>
    <string name="orders">Orders</string>
    <string name="phone">Phone Number:</string>
    <string name="product_name_order">Product:</string>
    <string name="order_date">Order Date:</string>
    <string name="email_single_order">Email:</string>
    <string name="not_provided">Not provided.</string>
    <string name="unknown">Unknown</string>
    <string name="no_more_orders_to_load">No more orders to load.</string>
    <string name="no_more_products_to_load">No more products to load.</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="about_us">About Us</string>
    <string name="removed_from_wishlist">This product has been removed from your wishlist.</string>
    <string name="added_to_wishlist">This product has been added to your wishlist.</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="all_products">All Products</string>
    <string name="new_products">New Products</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="wishlist_empty">There are not any items in your wishlist currently.</string>
    <string name="telegram_username">Enter Telegram username...</string>
</resources>